<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.SignUpFragment"
    android:background="@color/cardview_light_background"
    >

    <LinearLayout
        android:paddingTop="35dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-128dp">

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="#000000"

            android:textColorHint="@android:color/black"
            android:autofillHints="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/black"
            android:autofillHints="@string/email" />


        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:textColorHint="#000000"
            android:autofillHints="@string/password" />

        <Button
            android:id="@+id/btn_signup_signup"
            android:textSize="15sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:text="@string/signup" />
        <TextView
            android:textColor="#000000"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            >

        </TextView>
        <TextView

            android:id="@+id/login"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/login"
            >

        </TextView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>