<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="#FFFFFF"
    android:id="@+id/cl"
    >

    <LinearLayout
        android:id="@+id/ll"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:gravity="center"
        android:foregroundGravity="center"
        android:paddingRight="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome back"
            android:textStyle="bold"
            android:textColor="#000000">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/engagement"
            android:text="Login"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            android:textSize="60sp"
            android:textStyle="bold">

        </TextView>


        <EditText
            android:id="@+id/input_email"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:autofillHints="@string/email"
            android:background="@drawable/style"
            android:defaultFocusHighlightEnabled="true"
            android:hint="Email"
            android:nextFocusDown="@+id/input_password"

            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textColorHint="@android:color/black"
            android:visibility="visible" />


        <EditText
            android:nextFocusDown="@+id/btn_login"
            android:nextFocusUp="@+id/input_email"
            android:defaultFocusHighlightEnabled="true"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/password"
            android:background="@drawable/style"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textColorHint="#000000" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/style"
            android:backgroundTint="#009688"
            android:padding="12dp"

            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="15sp" />


        <TextView

            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/no_account_yet_create_one"
            android:textColor="#000000"
            android:textSize="16sp" />


        <Button
            android:defaultFocusHighlightEnabled="true"
            android:background="@drawable/style"
            android:backgroundTint="#009688"
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="45dp"
            android:textSize="15sp"
            android:padding="12dp"
            android:text="@string/signup"
            android:textColor="@android:color/white" />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>