<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl3"
    tools:context=".view.AddCategoryFragment"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:background="#009788"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="Add category"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >


    <ImageView
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ac_title"
        app:layout_constraintLeft_toLeftOf="@+id/ac_title"
        android:id="@+id/categoryimage_category"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/ic_photo_library_black_photo"/>
        <EditText
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/style"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:hint="@string/enter_category_title_name"
            android:textColorHint="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/ac_title">

        </EditText>
    <Button
        android:paddingLeft="10dp"
        android:paddingRight="10dp"

        android:background="@drawable/style_profile"
        android:backgroundTint="#009688"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"

        android:textColor="@android:color/white"
        android:id="@+id/ac_addimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category_image"
        app:layout_constraintTop_toBottomOf="@+id/ac_image"
        app:layout_constraintLeft_toLeftOf="@id/ac_image">

    </Button>


    <Button
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/style_profile"
        android:backgroundTint="#009688"

        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/add_category"
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintTop_toBottomOf="@+id/ac_addimage"
        app:layout_constraintLeft_toLeftOf="@id/ac_addimage"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>